--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "swiper": "^9.2.4"
+    "react-use-cart": "^1.13.0",
+    "swiper": "^9.2.4",
+    "use-shopping-cart": "^3.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
